--- a/index.html
+++ b/index.html
@@ -16,7 +16,37 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="css/style.css" />
-    <title>JMJ import & export</title>
+    <title>JNO Enterprises | Import Export Company in India</title>
+
+<meta name="description" content="JNO Enterprises is a trusted import export company in India offering eco-conscious bags, Indian handicrafts, brass artware, logistics, customs clearance and global trade solutions." />
+
+<meta name="keywords" content="JNO Enterprises, import export company India, Indian handicrafts exporter, hemp bags exporter, brass artware export, logistics services India" />
+
+<meta name="author" content="JNO Enterprises" />
+
+<!-- Open Graph / WhatsApp -->
+<meta property="og:title" content="JNO Enterprises | Import Export & Global Trade Solutions" />
+<meta property="og:description" content="Trusted import export company dealing in eco-conscious bags, handicrafts, brass artware and logistics services worldwide." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.jnoenterprises.in" />
+<meta property="og:image" content="https://www.jnoenterprises.in/images/new_logo.png" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "JNO Enterprises",
+  "url": "https://www.jnoenterprises.in",
+  "logo": "https://www.jnoenterprises.in/images/new_logo.png",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+91-9315268310",
+    "contactType": "customer service",
+    "areaServed": "IN",
+    "availableLanguage": "English"
+  }
+}
+</script>
+
   </head>
   <body>
     <div class="wrapper">
@@ -144,6 +174,7 @@
           <div class="welcome-para">
             <div class="bg-map">
               <h1>Bringing the world <br />to your doorstep</h1>
+
             </div>
             <p>
               Welcome to the world of JNO Enterprises, a leading company
